fixed testimonials z-index

--- a/less/blocks/_testimonials.less
+++ b/less/blocks/_testimonials.less
@@ -69,7 +69,7 @@
     &::before {
       content: "Sarah-A";
 
-      z-index: 1;
+      z-index: -1;
       position: absolute;
       left: 50%;
       top: -50%;
